--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,8 @@
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Noto+Sans+Warang+Citi&display=swap" rel="stylesheet">
 </head>
-<body class="mat-typography mat-app-background">
+<!-- <body class="mat-typography mat-app-background"> -->
+<body>
   <app-root></app-root>
 </body>
 </html>
